--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,6 +4,9 @@ on:
     push:
         branches:
             - main
+                
+    schedule:
+        - cron: '30 8 * * *'
 
 permissions:
     contents: write
