--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,23 +16,50 @@ jobs:
         runs-on: ubuntu-24.04
 
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-  
-            - name: Generate Picture
-              uses: ry05k2ulv/grassland@main
-              with:
-                  github_username: ${{ github.repository_owner }}
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  config_file: ${{ github.workspace }}/config.toml
-  
-            - name: Push output image to output branch
-              uses: crazy-max/ghaction-github-pages@v4
-              with:
-                  target_branch: output
-                  build_dir: dist
-                  commit_message: "Generate Output Image"
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          - name: Checkout
+            uses: actions/checkout@v4
 
+          - name: Generate Picture
+            uses: nrysk/cgrass@main
+            with:
+                github_username: ${{ github.repository_owner }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                output_path: output/github.png
+                command: "theme"
+                argument: "github"
 
+          - name: Generate Picture
+            uses: nrysk/cgrass@main
+            with:
+                github_username: ${{ github.repository_owner }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                output_path: output/github-nograss.png
+                command: "theme"
+                argument: "github-nograss"
+
+          - name: Generate Picture
+            uses: nrysk/cgrass@main
+            with:
+                github_username: ${{ github.repository_owner }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                output_path: output/planet.png
+                command: "theme"
+                argument: "planet"
+
+          - name: Generate Picture
+            uses: nrysk/cgrass@main
+            with:
+                github_username: ${{ github.repository_owner }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                output_path: output/planet-nograss.png
+                command: "theme"
+                argument: "planet-nograss"
+
+          - name: Push output image to output branch
+            uses: crazy-max/ghaction-github-pages@v4
+            with:
+                target_branch: output
+                build_dir: output
+                commit_message: "Generate Output Image"
+            env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
